@@ -122,6 +122,8 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
       Hence, just use the colon pseudo-command.
     - x2goserver/Makefile: fix syntax error due to non-duplicated dollar signs
       in comment lines.
+    - x2goserver/Makefile: export common variables for direct use in shell
+      script sections.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
